# delaynet

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: docs.yml  lint.yml  test.yml
delaynet/: __init__.py  _version.py  causality.py  connectivity.py  decorators.py  detrending.py  evaluation.py  network_reconstruction.py  normalisation.py
delaynet/causalities/: __init__.py  continuous_ordinal_patterns.py  granger.py  mutual_information.py  naive_sum.py  ordinal_synchronisation.py  rank_correlation.py  transfer_entropy.py
delaynet/connectivities/: __init__.py  connectivity.py  continuous_ordinal_patterns.py  granger.py  gravity.py  linear_correlation.py  mutual_information.py  naive_sum.py  ordinal_synchronisation.py  ordinal_synchronization.py  rank_correlation.py  transfer_entropy.py
delaynet/detrending_methods/: delta.py  z_score.py
delaynet/network_analysis/: __init__.py  _normalisation.py  metrics.py  pruning.py
delaynet/norms/: __init__.py  delta.py  identity.py  norm.py  second_difference.py  z_score.py
delaynet/preparation/: __init__.py  data_generator.py
delaynet/preprocess/: __init__.py  symbolic.py
delaynet/utils/: __init__.py  bind_args.py  dict_lookup.py  logging.py  multi_coeff_binning.py  multiple_coeff_binning.py  symbolic.py
docs/: .readthedocs.yaml  bibliography.rst  changelog.myst  changelog.rst  conf.py  getting_started.md  index.md  index.rst  refs.bib
docs/api/: index.rst
docs/demos/: 01_connectivity_synthetic.myst  01_sbb_functional_network_top50.myst  02_demo.myst  02_network_reconstruction_and_metrics.myst  03_demo.myst  03_network_reconstruction_and_metrics.myst  index.md  stops_long_distance_gdf_07-2025.geojson
docs/guide/: 00_preparation.myst  10_preprocess.myst  20_norm.myst  30_connectivity.myst  30_network_reconstruction.myst  40_network_analysis.myst  40_network_reconstruction.myst  41_network_pruning.myst  42_topological_analysis.myst  50_evaluation.myst  index.myst
docs/guide/10_detrending/: delta.myst  identity.myst  index.myst  second_difference.myst  z_score.myst
docs/guide/20_connectivity/: continuous_ordinal_patterns.myst  granger_causality.myst  gravity.myst  index.myst  linear_correlation.myst  mutual_information.myst  rank_correlation.myst  transfer_entropy.myst
examples/: TestConnectivities.py  benchmark_normalisation.py  connectivity_decorator_demo.py  cross_validate_networkx.py  network_metrics_demo.py  vary_metrics.py
tests/: __init__.py  conftest.py  test_causality.py  test_connectivity.py  test_connectivity_decorator_errors.py  test_detrend.py  test_evaluation.py  test_general.py  test_network_reconstruction.py  test_normalise.py
tests/connectivities/: test_all_connectivities.py  test_connectivity_decorator.py  test_continuous_ordinal_patterns.py  test_granger.py  test_gravity.py  test_linear_correlation.py  test_mutual_information.py  test_rank_correlation.py  test_transfer_entropy.py
tests/detrending_methods/: test_delta.py  test_detrending_decorator.py  test_second_difference.py  test_z_score.py
tests/network_analysis/: test_betweenness_normalization.py  test_metrics.py  test_normalisation.py
tests/norms/: __init__.py  test_all_norms.py  test_norm_decorator.py  test_z_score.py
tests/preparation/: test_data_generator.py
tests/preprocess/: test_symbolic.py
tests/utils/: test_bind_args.py  test_connectivity_protocol.py  test_lag_steps.py  test_symbolic.py
