[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "delaynet"
authors = [{ name = "Carlson Büth" }, { name = "Massimiliano Zanin" }]
maintainers = [{ name = "Carlson Büth", email = "code@cbueth.de" }]
description = "Delay Propagation in Transportation Networks"
keywords = ["Delay Propagation", "Transportation Networks", "Tnformation Flow", "Information Theory"]
license = { text = "BSD-3-Clause" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Private :: Do Not Upload", # Remove this line to upload to PyPI
]
dynamic = ["readme", "version"]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "statsmodels",
    "scikit-learn",
    "numba",
    "infomeasure>=0.5.0",
    "igraph",
    "synthatdelays>=1.0.2",
]

[project.urls]
Documentation = "https://carlson.pages.ifisc.uib-csic.es/delaynet/"
Repository = "https://gitlab.ifisc.uib-csic.es/carlson/delaynet"
Issues = "https://gitlab.ifisc.uib-csic.es/carlson/delaynet/issues"
Changelog = "https://carlson.pages.ifisc.uib-csic.es/delaynet/changelog/"

[project.optional-dependencies]
lint = ["pre-commit", "ruff"]
test = ["pytest", "pytest-cov", "coverage"]
doc = [
    "sphinx",
    "myst-nb",
    "sphinx-design",
    "sphinx-book-theme",
    "sphinxcontrib-bibtex",
    "matplotlib",
]
all = ["delaynet[lint,test,doc]"]

[tool.setuptools.packages.find]
exclude = [
    "examples*",
    "docs*",
]
namespaces = false

[tool.setuptools.dynamic]
readme = { file = ["README.md", "LICENSE.txt"] }
version = { attr = "delaynet._version.__version__" }

# --------------------------------------------------------------------------------------
# Linting
# --------------------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["NPY201"]

# --------------------------------------------------------------------------------------
# Testing
# --------------------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["delaynet"]
relative_files = true
